Image Fix
Some images will appearing too big, so changed the css so images don't appear huge.

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -138,3 +138,9 @@ button:focus-visible {
   background-color: lightgray;
   border-radius: 8px;
 }
+
+.foodImage {
+  max-width: 100%;
+  height: auto;
+  max-height: 300px;
+}
